postcss/testData/inspections/mediaFeatureInvalid.pcss
@media (<error descr="Unknown media feature 'my-media'">my-media</error>: 100px){}